Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
None
Description
Turbodbc fails to compile (both "master" and "latest" versions with this error):
FAILED: cpp/turbodbc_arrow/Library/CMakeFiles/turbodbc_arrow_support.dir/src/arrow_result_set.cpp.o /opt/conda/envs/arrow/bin/x86_64-conda_cos6-linux-gnu-c++ -Dturbodbc_arrow_support_EXPORTS -I/turbodbc/cpp/turbodbc_arrow/Library -I/turbodbc/cpp/turbodbc_arrow/../cpp_odbc/Library -I/turbodbc/cpp/turbodbc_arrow/../turbodbc/Library -I/turbodbc/pybind11/include -isystem /opt/conda/envs/arrow/include -isystem /opt/conda/envs/arrow/include/python3.7m -isystem /opt/conda/envs/arrow/lib/python3.7/site-packages/numpy/core/include -fvisibility-inlines-hidden -Wall -Wextra -g -O0 -pedantic -fPIC -fvisibility=hidden -std=c++11 -std=c++14 -MD -MT cpp/turbodbc_arrow/Library/CMakeFiles/turbodbc_arrow_support.dir/src/arrow_result_set.cpp.o -MF cpp/turbodbc_arrow/Library/CMakeFiles/turbodbc_arrow_support.dir/src/arrow_result_set.cpp.o.d -o cpp/turbodbc_arrow/Library/CMakeFiles/turbodbc_arrow_support.dir/src/arrow_result_set.cpp.o -c /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp: In member function 'arrow::Status turbodbc_arrow::{anonymous}::StringDictionaryBuilderProxy::AppendProxy(const char*, int32_t)': /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:67:36: error: no matching function for call to 'turbodbc_arrow::{anonymous}::StringDictionaryBuilderProxy::Append(const char*&, int32_t&)' return Append(value, length); ^ In file included from /opt/conda/envs/arrow/include/arrow/builder.h:26:0, from /opt/conda/envs/arrow/include/arrow/api.h:26, from /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:6: /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:143:10: note: candidate: arrow::Status arrow::internal::DictionaryBuilderBase<BuilderType, T>::Append(const Scalar&) [with BuilderType = arrow::AdaptiveIntBuilder; T = arrow::StringType; arrow::internal::DictionaryBuilderBase<BuilderType, T>::Scalar = nonstd::sv_lite::basic_string_view<char>] Status Append(const Scalar& value) { ^~~~~~ /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:143:10: note: candidate expects 1 argument, 2 provided /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:156:43: note: candidate: template<class T1> arrow::enable_if_fixed_size_binary<T1, arrow::Status> arrow::internal::DictionaryBuilderBase<BuilderType, T>::Append(const uint8_t*) [with T1 = T1; BuilderType = arrow::AdaptiveIntBuilder; T = arrow::StringType] enable_if_fixed_size_binary<T1, Status> Append(const uint8_t* value) { ^~~~~~ /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:156:43: note: template argument deduction/substitution failed: /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:67:36: note: candidate expects 1 argument, 2 provided return Append(value, length); ^ In file included from /opt/conda/envs/arrow/include/arrow/builder.h:26:0, from /opt/conda/envs/arrow/include/arrow/api.h:26, from /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:6: /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:162:43: note: candidate: template<class T1> arrow::enable_if_fixed_size_binary<T1, arrow::Status> arrow::internal::DictionaryBuilderBase<BuilderType, T>::Append(const char*) [with T1 = T1; BuilderType = arrow::AdaptiveIntBuilder; T = arrow::StringType] enable_if_fixed_size_binary<T1, Status> Append(const char* value) { ^~~~~~ /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:162:43: note: template argument deduction/substitution failed: /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:67:36: note: candidate expects 1 argument, 2 provided return Append(value, length); ^ In file included from /opt/conda/envs/arrow/include/arrow/builder.h:26:0, from /opt/conda/envs/arrow/include/arrow/api.h:26, from /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:6: /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:168:37: note: candidate: template<class T1> arrow::enable_if_binary_like<T1, arrow::Status> arrow::internal::DictionaryBuilderBase<BuilderType, T>::Append(const uint8_t*, int32_t) [with T1 = T1; BuilderType = arrow::AdaptiveIntBuilder; T = arrow::StringType] enable_if_binary_like<T1, Status> Append(const uint8_t* value, int32_t length) { ^~~~~~ /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:168:37: note: template argument deduction/substitution failed: /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:67:36: note: cannot convert 'value' (type 'const char*') to type 'const uint8_t* {aka const unsigned char*}' return Append(value, length); ^ In file included from /opt/conda/envs/arrow/include/arrow/builder.h:26:0, from /opt/conda/envs/arrow/include/arrow/api.h:26, from /turbodbc/cpp/turbodbc_arrow/Library/src/arrow_result_set.cpp:6: /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:174:37: note: candidate: template<class T1> arrow::enable_if_binary_like<T1, arrow::Status> arrow::internal::DictionaryBuilderBase<BuilderType, T>::Append(const char*, int32_t) [with T1 = T1; BuilderType = arrow::AdaptiveIntBuilder; T = arrow::StringType] enable_if_binary_like<T1, Status> Append(const char* value, int32_t length) { ^~~~~~ /opt/conda/envs/arrow/include/arrow/array/builder_dict.h:174:37: note: template argument deduction/substitution failed: [151/156] Building CXX object cpp/turbodbc_arrow/Library/CMakeFiles/turbodbc_arrow_support.dir/src/set_arrow_parameters.cpp.o /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp: In member function 'void turbodbc_arrow::{anonymous}::string_converter::rebind_to_maximum_length(const arrow::BinaryArray&, std::size_t, std::size_t)': /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp:101:33: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] for (int64_t i = 0; i != elements; ++i) { ~~^~~~~~~~~~~ /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp: In member function 'void turbodbc_arrow::{anonymous}::string_converter::set_batch_utf16(std::size_t, std::size_t)': /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp:140:31: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] for (int64_t i = 0; i != elements; ++i) { ~~^~~~~~~~~~~ /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp: In instantiation of 'void turbodbc_arrow::{anonymous}::string_converter::set_batch_of_type(std::size_t, std::size_t) [with String = std::__cxx11::basic_string<char>; std::size_t = long unsigned int]': /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp:173:57: required from here /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp:121:33: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] for (int64_t i = 0; i != elements; ++i) { ~~^~~~~~~~~~~ /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp: In function 'std::vector<std::unique_ptr<turbodbc_arrow::{anonymous}::parameter_converter> > turbodbc_arrow::{anonymous}::make_converters(const arrow::Table&, turbodbc::bound_parameter_set&)': /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp:363:41: warning: this statement may fall through [-Wimplicit-fallthrough=] converters.emplace_back(new null_converter(data, parameters, i)); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /turbodbc/cpp/turbodbc_arrow/Library/src/set_arrow_parameters.cpp:364:15: note: here case arrow::Type::INT8: ^~~~ [152/156] Building CXX object cpp/turbodbc_arrow/Library/CMakeFiles/turbodbc_arrow_support.dir/src/python_bindings.cpp.o ninja: build stopped: subcommand failed. Exited with code exit status 1
Attachments
Issue Links
- links to