ARROW-8095: [C++] Add support for string dictionary value with length